Define the color palette.

--- a/index.html
+++ b/index.html
@@ -7,5 +7,15 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body></body>
+
+  <body>
+    <ol type="">
+      <li>one</li>
+      <li>one</li>
+      <li>one</li>
+      <li>one</li>
+      <li>one</li>
+      <li>one</li>
+    </ol>
+  </body>
 </html>
