--- a/index.html
+++ b/index.html
@@ -15,14 +15,6 @@
   </head>
 
   <body>
-    <!-- h${heading $}*3 -->
-    <h1>heading 1</h1>
-    <h2>heading 2</h2>
-    <h3>heading 3</h3>
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus
-      excepturi mollitia deserunt deleniti officia dolor laboriosam cupiditate
-      obcaecati iste cum.
-    </p>
+    <a href="" class="link-arrow">Learn More</a>
   </body>
 </html>
