Input Button and Icon

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   </head>
 
   <body>
-    <a href="" class="link-arrow">Learn More</a>
+    <div class="input-group">
+      <input type="text" class="input" placeholder="Enter domain here..." />
+      <button class="btn btn--accent">search</button>
+    </div>
   </body>
 </html>
