--- a/index.html
+++ b/index.html
@@ -15,28 +15,21 @@
   </head>
 
   <body>
-    <div style="width: 50%; padding: 4rem">
-      <divl class="plan plan--popular">
-        <div class="card card--secondary">
-          <!-- the reason for using under score for class name card__header is because the header is the element inside this block, so it can not exist on it's own outside of this block or outside of this component. -->
-          <header class="card__header">
-            <h3 class="plan__name">Entry</h3>
-            <span class="plan__price">$14</span>
-            <span class="plan__billing-circle">/month</span>
-            <span class="badge badge--secondary badge--small">10% OFF</span>
-            <span class="plan__description">Easy start on the cloud.</span>
-          </header>
-          <div class="card__body">
-            <ul class="list list--tick">
-              <li class="list__item">Unlimited Website</li>
-              <li class="list__item">Unlimited Bandwidth</li>
-              <li class="list__item">100 GB SSD Storage</li>
-              <li class="list__item">3 GB RAM</li>
-            </ul>
-            <button class="btn btn--outline btn--block">Buy Now</button>
-          </div>
-        </div>
-      </divl>
+    <div class="media">
+      <div class="media__image">
+        <svg class="icon icon--primary">
+          <!-- adding location for loading icon from our svg files. images/sprite.svg -->
+          <use xlink:href="images/sprite.svg#103448_computer_accept_icon"></use>
+        </svg>
+      </div>
+      <div class="media__body">
+        <h3 class="media__title">Easy start & Managed Updates</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam,
+          aliquid? Ea suscipit dicta, aspernatur praesentium itaque nostrum
+          quisquam, officiis iure autem eligendi nesciunt et cupiditate!
+        </p>
+      </div>
     </div>
   </body>
 </html>
