--- a/index.html
+++ b/index.html
@@ -14,22 +14,5 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 
-  <body>
-    <div class="media">
-      <div class="media__image">
-        <svg class="icon icon--primary">
-          <!-- adding location for loading icon from our svg files. images/sprite.svg -->
-          <use xlink:href="images/sprite.svg#103448_computer_accept_icon"></use>
-        </svg>
-      </div>
-      <div class="media__body">
-        <h3 class="media__title">Easy start & Managed Updates</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam,
-          aliquid? Ea suscipit dicta, aspernatur praesentium itaque nostrum
-          quisquam, officiis iure autem eligendi nesciunt et cupiditate!
-        </p>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
