--- a/index.html
+++ b/index.html
@@ -15,6 +15,31 @@
   </head>
 
   <body>
+    <blockquote class="Quote">
+      <p class="quote__text">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat
+        laborum hic aut rem nesciunt alias cumque quis provident molestiae quod!
+      </p>
+      <footer>
+        <div class="media">
+          <div class="media__image">
+            <!-- <svg class="icon icon--primary quote__line"> -->
+            <!-- adding location for loading icon from our svg files. images/sprite.svg -->
+            <img
+              class="icon icon primary quote__line"
+              src="images/line.svg"
+              alt=""
+            />
+            <!-- </svg> -->
+          </div>
+          <div class="media__body">
+            <h3 class="media__title quote__author">Fablo Wagana</h3>
+            <p class="quote__organization">Backendsupport Student club</p>
+          </div>
+        </div>
+      </footer>
+    </blockquote>
+
     <script src="js/main.js"></script>
   </body>
 </html>
