--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       property="og:title"
       content="Backendsupport - Quick innovation and success system"
     />
-    <meta property="og:image" content="images/backendlogos" />
+    <meta property="og:image" content="images/backendlogos.png" />
     <meta property="og:type" content="Website" />
     <meta
       property="og:url"
@@ -39,7 +39,7 @@
         /></a>
         <svg class="icon icon--primary nav__toogler">
           <!-- adding location for loading icon from our svg files. images/sprite.svg -->
-          <use xlink:href="images/sprite.svg#menu"></use>
+          <use href="images/sprite.svg#menu"></use>
         </svg>
         <ul class="list nav__list collapsible__content">
           <li class="nav__item"><a href="#">Hosting</a></li>
@@ -89,7 +89,7 @@
         <button class="btn btn--accent">
           <svg class="icon icon--white">
             <!-- adding location for loading icon from our svg files. images/sprite.svg -->
-            <use xlink:href="images/sprite.svg#search"></use>
+            <use href="images/sprite.svg#search"></use>
           </svg>
           search
         </button>
@@ -190,7 +190,7 @@
           <span class="icon-container">
             <svg class="icon icon--primary">
               <!-- adding location for loading icon from our svg files. images/sprite.svg -->
-              <use xlink:href="images/sprite.svg#settings"></use>
+              <use href="images/sprite.svg#settings"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Super Easy to use</h3>
@@ -213,7 +213,7 @@
           <span class="icon-container">
             <svg class="icon icon--primary">
               <!-- adding location for loading icon from our svg files. images/sprite.svg -->
-              <use xlink:href="images/sprite.svg#settings"></use>
+              <use href="images/sprite.svg#settings"></use>
             </svg>
           </span>
           <h3 class="feature__heading">Super Easy to use</h3>
@@ -233,13 +233,13 @@
         <div class="container grid grid--1x2">
           <picture class="block-showcase__image" data-aos="zoom-in-left">
             <source
-              type="webp"
+              type="images/webp"
               srcset="images/banner@2x.webp 1x, images/banner@3x.webp 2x"
             />
-            <source
-              type="jpg"
-              srcset="images/banner@2x.jpg 1x, images/banner@3x.jpg 2x"
-            />
+            <!-- <source
+              type="images/jpeg"
+              srcset="images/banner@2x.jpeg 1x, images/banner@3x.jpeg 2x"
+            /> -->
             <img src="images/banner.jpg" alt="" />
           </picture>
           <ul class="list" data-aos="fade-up">
@@ -248,7 +248,7 @@
                 <div class="media__image">
                   <svg class="icon icon--primary">
                     <!-- adding location for loading icon from our svg files. images/sprite.svg -->
-                    <use xlink:href="images/sprite.svg#settings"></use>
+                    <use href="images/sprite.svg#settings"></use>
                   </svg>
                 </div>
                 <div class="media__body">
@@ -267,7 +267,7 @@
                 <div class="media__image">
                   <svg class="icon icon--primary">
                     <!-- adding location for loading icon from our svg files. images/sprite.svg -->
-                    <use xlink:href="images/sprite.svg#settings"></use>
+                    <use href="images/sprite.svg#settings"></use>
                   </svg>
                 </div>
                 <div class="media__body">
@@ -286,7 +286,7 @@
                 <div class="media__image">
                   <svg class="icon icon--primary">
                     <!-- adding location for loading icon from our svg files. images/sprite.svg -->
-                    <use xlink:href="images/sprite.svg#settings"></use>
+                    <use href="images/sprite.svg#settings"></use>
                   </svg>
                 </div>
                 <div class="media__body">
@@ -320,7 +320,7 @@
               <span class="icon-container icon-container--accent">
                 <svg class="icon icon--white icon-small">
                   <!-- adding location for loading icon from our svg files. images/sprite.svg -->
-                  <use xlink:href="images/sprite.svg#quote"></use>
+                  <use href="images/sprite.svg#quote"></use>
                 </svg>
               </span>
             </div>
@@ -353,6 +353,95 @@
         </div>
       </div>
     </section>
+    <!-- collouts block -->
+    <div class="collout collout--primary">
+      <div class="grid grid--1x2">
+        <div class="collout__content">
+          <h2 class="collout__heading">Ready To Get Started</h2>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere
+            perspiciatis commodi harum id, eveniet nisi earum deserunt quam
+            rerum, corporis, ducimus debitis numquam enim velit inventore
+            voluptate aspernatur atque est.
+          </p>
+        </div>
+        <a href="" class="btn btn--secondary btn--streched">Get Started</a>
+      </div>
+    </div>
+
+    <!-- footer -->
+    <footer class="block block--dark footer">
+      <div class="container grid footer__sections">
+        <section class="collapsible collapsible--expanded footer__section">
+          <div class="collapsible__header">
+            <h1 class="collapsible__heading footer__heading">Products</h1>
+            <svg class="icon icon--white collapsible__right">
+              <!-- adding location for loading icon from our svg files. images/sprite.svg -->
+              <use href="images/sprite.svg#right"></use>
+            </svg>
+          </div>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Web Hosting</a></li>
+              <li><a href="#">Free Automated Wordpress</a></li>
+              <li><a href="#">Migrations</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__section">
+          <div class="collapsible__header">
+            <h1 class="collapsible__heading footer__heading">Company</h1>
+            <svg class="icon icon--white collapsible__right">
+              <!-- adding location for loading icon from our svg files. images/sprite.svg -->
+              <use href="images/sprite.svg#right"></use>
+            </svg>
+          </div>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Web Hosting</a></li>
+              <li><a href="#">Free Automated Wordpress</a></li>
+              <li><a href="#">Migrations</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__section">
+          <div class="collapsible__header">
+            <h1 class="collapsible__heading footer__heading">support</h1>
+            <svg class="icon icon--white collapsible__right">
+              <!-- adding location for loading icon from our svg files. images/sprite.svg -->
+              <use href="images/sprite.svg#right"></use>
+            </svg>
+          </div>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Web Hosting</a></li>
+              <li><a href="#">Free Automated Wordpress</a></li>
+              <li><a href="#">Migrations</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="collapsible footer__section">
+          <div class="collapsible__header">
+            <h1 class="collapsible__heading footer__heading">Domains</h1>
+            <svg class="icon icon--white collapsible__right">
+              <!-- adding location for loading icon from our svg files. images/sprite.svg -->
+              <use href="images/sprite.svg#right"></use>
+            </svg>
+          </div>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li><a href="#">Web Hosting</a></li>
+              <li><a href="#">Free Automated Wordpress</a></li>
+              <li><a href="#">Migrations</a></li>
+            </ul>
+          </div>
+        </section>
+        <div class="footer__brand">
+          <img src="images/backendlogo.png" alt="" />
+          <p class="footer__copyright">&copy; 2024 tEACH Me</p>
+        </div>
+      </div>
+    </footer>
 
     <script src="js/main.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
